that represent multiple outcomes.

- Press ~d~ to duplicate with rename prompt (enter a new title)
- Press ~D~ to duplicate exactly as-is
- Duplicates are queued and processed immediately after the current item
- Queue displays in a side window showing pending duplicates
- When canceling with pending duplicates, choose to discard or save to inbox
- Customize queue window position with ~org-gtd-clarify-duplicate-queue-position~

* 4.3.1 - 2026-01-17

** Fixed
*** Project graph now colors nodes by TODO state instead of priority
Previously, graph nodes were colored by priority (A/B/C), not by TODO state
(NEXT/TODO). This made the graph confusing since colors didn't indicate which
tasks were actionable. Nodes now correctly show NEXT tasks in blue and TODO
tasks in orange.

*** Graph colors updated to be color-blind accessible
Graph node colors now use the Okabe-Ito palette, which is designed to be
distinguishable by people with color vision deficiency. The blue/orange
contrast for NEXT/TODO is safe for all common forms of color blindness.

** Changed
*** Documentation updated for graph colors and layout
- Node colors: Blue = NEXT (actionable), Orange = TODO (blocked)
- Project heading appears at bottom of graph (represents end state after all tasks complete)
- Tasks flow from top (first) to bottom (last)

* 4.3.0 - 2026-01-12

** Changed
*** Auto-refile now only uses targets in org-gtd-tasks.org
Auto-refile now only uses targets in ~org-gtd-tasks.org~, ignoring user's
~org-refile-targets~ and other ~org-agenda-files~. This fixes issues where items
would be refiled to unexpected locations. (GitHub issues #259, #266)

** Added
*** ORG_GTD_REFILE property now supports multiple space-separated values
A heading with property value ~Actions Projects~ (e.g., ~:ORG_GTD_REFILE: Actions Projects~)
will be a valid target for both single actions and projects.

* 4.2.3 - 2026-01-10

** Fixed
*** WIP buffer cleanup with symlinked temp directories (Fix #271)