@@ -10,6 +10,7 @@ that represent multiple outcomes.
 - Duplicates are queued and processed immediately after the current item
 - Queue displays in a side window showing pending duplicates
 - When canceling with pending duplicates, choose to discard or save to inbox
+- Before exiting Emacs, prompts if any clarify buffers have pending duplicates
 - Customize queue window position with ~org-gtd-clarify-duplicate-queue-position~
 
 * 4.3.1 - 2026-01-17
